# hanson-operator

./: LICENSE.md  README.md  pyproject.toml
scripts/: sonify_operator.py
the_hanson_operator/: __init__.py  __main__.py  cli.py  config.py  display.py  engine.py  invariants.py  kernel.py  operators.py  primes.py
