[project]
name = "the-hanson-operator"
version = "1.0.0"
description = "Proof of the Riemann Hypothesis via Trace-Class Regularisation of the Prime Field and Spectral Stability of the Mehler-Zeta Operator"
requires-python = ">=3.10"
authors = [
    { name = "Oliver Jon Hanson" },
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "click>=8.0",
    "tqdm>=4.60",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.8"]
dev = ["pytest>=7.0", "matplotlib>=3.8"]

[project.scripts]
hanson-operator = "the_hanson_operator.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
